# crxcurses

./: CMakeLists.txt  README.md  c_demo.c  demo.rexx  rxcurses.c  rxcurses_demo.rexx  rxcurses_demo2.rexx  rxcurses_integration_test.rexx
pdcurses/: CMakeLists.txt
pdcurses/cmake/: dll_version.cmake  project_common.cmake
rxpa/: crexxpa.h
